--- a/examples/rich_style.html
+++ b/examples/rich_style.html
@@ -1,26 +1,110 @@
-<table border="1" cellspacing="0" cellpadding="4">
-<tr>
-<th style="font-weight:bold;font-size:16.0pt;color:#FF0000;text-align:center;vertical-align:center;text-decoration:underline;" colspan="3">标题</th>
-</tr>
-<tr>
-<td style="font-weight:bold;text-decoration:underline;">姓名</td>
-<td style="font-weight:bold;text-decoration:line-through;">年龄</td>
-<td style="font-weight:bold;font-style:italic;">城市</td>
-</tr>
-<tr>
-<td style="font-size:11.0pt;background-color:#FFFF00;font-family:Calibri;border-top:1px dashed #00FF00;border-left:3px solid #0000FF;">张三</td>
-<td style="font-size:11.0pt;font-family:Calibri;border-bottom:1px dotted #FF00FF;">25</td>
-<td style="font-size:11.0pt;font-family:Calibri;border-right:2px solid #FF9900;">北京</td>
-</tr>
-<tr>
-<td style="font-style:italic;">李四</td>
-<td style="text-decoration:line-through;">30</td>
-<td style="text-decoration:underline;">上海</td>
-</tr>
-<tr>
-<td style="font-size:11.0pt;font-family:Calibri;white-space:pre-wrap;">王五
-多行</td>
-<td style="font-size:11.0pt;font-family:Calibri;">28</td>
-<td style="font-size:11.0pt;font-family:Calibri;">广州</td>
-</tr>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>样式丰富</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; background-color: #f5f5f5; }
+        table { border-collapse: collapse; width: 100%; background-color: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        td, th { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        .header { background-color: #f8f9fa; font-weight: bold; color: #333; }
+
+        @media screen and (max-width: 768px) {
+            table { font-size: 12px; }
+            td, th { padding: 4px; }
+        }
+
+        td[title], th[title] {
+            position: relative;
+            cursor: help;
+        }
+        td[title]:after, th[title]:after {
+            content: '💬';
+            position: absolute;
+            top: 2px;
+            right: 2px;
+            font-size: 10px;
+            color: #ff6b6b;
+        }
+        /* 生成的CSS类 */
+/* 模板全局样式 */
+
+            .business-table { 
+                font-family: 'Segoe UI', Arial, sans-serif;
+                border-collapse: collapse;
+                width: 100%;
+                margin: 20px 0;
+                box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            }
+            .business-header {
+                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                color: white;
+                font-weight: 600;
+                text-align: center;
+                padding: 12px;
+                border: none;
+            }
+            .business-row:nth-child(even) {
+                background-color: #f8f9fa;
+            }
+            .business-row:hover {
+                background-color: #e9ecef;
+                transition: background-color 0.3s ease;
+            }
+            
+
+/* 生成的CSS类 */
+/* 11.0pt (使用4次) */
+.style-4336 {
+    font-size: 11.0pt;
+    font-family: "Calibri";
+}
+
+    </style>
+</head>
+<body>
+<table class="business-table" border="1" 
+cellspacing="0" 
+cellpadding="4">
+    <tr class="business-header">
+        <th colspan="3" style="font-weight: bold; text-decoration: underline; font-size: 16.0pt; color: #FF0000; text-align: center; vertical-align: middle">标题</th>
+    </tr>
+    <tr class="business-row">
+        <td style="font-weight: bold; text-decoration: underline">姓名</td>
+        <td style="font-weight: bold; text-decoration: line-through">年龄</td>
+        <td style="font-weight: bold; font-style: italic">城市</td>
+    </tr>
+    <tr class="business-row">
+        <td style="font-size: 11.0pt; font-family: "Calibri"; background-color: #FFFF00; border-top: dashed 1px #00FF00; border-left: solid 3px #0000FF">张三</td>
+        <td style="font-size: 11.0pt; font-family: "Calibri"; border-bottom: dotted 1px #FF00FF">25</td>
+        <td style="font-size: 11.0pt; font-family: "Calibri"; border-right: solid 2px #FF9900">北京</td>
+    </tr>
+    <tr class="business-row">
+        <td style="font-style: italic">李四</td>
+        <td style="text-decoration: line-through">30</td>
+        <td style="text-decoration: underline">上海</td>
+    </tr>
+    <tr class="business-row">
+        <td style="font-size: 11.0pt; font-family: "Calibri"; white-space: pre-wrap">王五 多行</td>
+        <td class="style-4336">28</td>
+        <td class="style-4336">广州</td>
+    </tr>
 </table>
+
+    <script>
+        // 为带有title属性的单元格添加交互效果
+        document.addEventListener('DOMContentLoaded', function() {
+            const cells = document.querySelectorAll('td[title], th[title]');
+            cells.forEach(cell => {
+                cell.addEventListener('mouseenter', function() {
+                    this.style.backgroundColor = '#f0f8ff';
+                });
+                cell.addEventListener('mouseleave', function() {
+                    this.style.backgroundColor = '';
+                });
+            });
+        });
+    </script>
+</body>
+</html>
