--- a/demo/静态展示/complex_features.html
+++ b/demo/静态展示/complex_features.html
@@ -34,6 +34,13 @@ th { background-color: #f8f9fa; font-weight: bold; color: #333; }
   body { margin: 0; background: white; }
   table { page-break-inside: avoid; }
 }
+.charts-container { margin: 20px 0; }
+.chart-item { margin-bottom: 30px; border: 1px solid #ddd; border-radius: 8px; padding: 15px; background: #f9f9f9; }
+.chart-title { margin: 0 0 15px 0; color: #333; font-size: 18px; font-weight: bold; }
+.chart-content { text-align: center; }
+.chart-content svg { max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 4px; }
+.chart-placeholder { border: 2px dashed #ccc; border-radius: 4px; display: flex; flex-direction: column; justify-content: center; align-items: center; background: #f5f5f5; color: #666; }
+.chart-placeholder p { margin: 5px 0; }
 </style>
 </head>
 <body>
@@ -49,44 +56,44 @@ th { background-color: #f8f9fa; font-weight: bold; color: #333; }
 <th style="font-weight: bold; color: #FFFFFF; background-color: #C0504D">备注</th>
 </tr>
 <tr>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">产品A</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">100</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">10</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">0.1</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif" title="公式: =B2*C2*(1-D2) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">900</span></td>
-<td class="comment-cell" style="font-size: 11.0px; font-family: "Calibri", sans-serif">热销产品<div class="comment-tooltip">这是热销产品</div></td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">产品A</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">100</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">10</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">0.1</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif" title="公式: =B2*C2*(1-D2) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">900</span></td>
+<td class="comment-cell" style="font-size: 11.0px; font-family: 'Calibri', sans-serif">热销产品<div class="comment-tooltip">这是热销产品</div></td>
 </tr>
 <tr>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">产品B</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">200</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">5</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">0.2</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif" title="公式: =B3*C3*(1-D3) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">800</span></td>
-<td class="comment-cell" style="font-size: 11.0px; font-family: "Calibri", sans-serif">新品上市<div class="comment-tooltip">新品上市，需要推广</div></td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">产品B</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">200</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">5</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">0.2</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif" title="公式: =B3*C3*(1-D3) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">800</span></td>
+<td class="comment-cell" style="font-size: 11.0px; font-family: 'Calibri', sans-serif">新品上市<div class="comment-tooltip">新品上市，需要推广</div></td>
 </tr>
 <tr>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">产品C</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">150</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">8</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">0.15</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif" title="公式: =B4*C4*(1-D4) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">1020</span></td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">库存充足</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">产品C</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">150</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">8</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">0.15</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif" title="公式: =B4*C4*(1-D4) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">1020</span></td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">库存充足</td>
 </tr>
 <tr>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">产品D</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">300</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">3</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">0.05</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif" title="公式: =B5*C5*(1-D5) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">855</span></td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">限量供应</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">产品D</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">300</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">3</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">0.05</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif" title="公式: =B5*C5*(1-D5) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">855</span></td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">限量供应</td>
 </tr>
 <tr>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">产品E</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">250</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">12</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">0.25</td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif" title="公式: =B6*C6*(1-D6) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">2250</span></td>
-<td style="font-size: 11.0px; font-family: "Calibri", sans-serif">促销中</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">产品E</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">250</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">12</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">0.25</td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif" title="公式: =B6*C6*(1-D6) (complex)"><span class="formula-indicator">ƒ</span><span class="formula-result">2250</span></td>
+<td style="font-size: 11.0px; font-family: 'Calibri', sans-serif">促销中</td>
 </tr>
 </table>
 </body>
