--- a/demo/静态展示/format_csv.html
+++ b/demo/静态展示/format_csv.html
@@ -34,6 +34,13 @@ th { background-color: #f8f9fa; font-weight: bold; color: #333; }
   body { margin: 0; background: white; }
   table { page-break-inside: avoid; }
 }
+.charts-container { margin: 20px 0; }
+.chart-item { margin-bottom: 30px; border: 1px solid #ddd; border-radius: 8px; padding: 15px; background: #f9f9f9; }
+.chart-title { margin: 0 0 15px 0; color: #333; font-size: 18px; font-weight: bold; }
+.chart-content { text-align: center; }
+.chart-content svg { max-width: 100%; height: auto; border: 1px solid #ccc; border-radius: 4px; }
+.chart-placeholder { border: 2px dashed #ccc; border-radius: 4px; display: flex; flex-direction: column; justify-content: center; align-items: center; background: #f5f5f5; color: #666; }
+.chart-placeholder p { margin: 5px 0; }
 </style>
 </head>
 <body>
